<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ActivitySecond">


    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="175dp" />
    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_header"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="175dp" />


    <EditText
        android:id="@+id/edit_text_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/button_second"
        android:layout_alignParentBottom="true"
        android:hint="@string/enter_your_reply_here"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:backgroundTint="@color/sekal_farros_red"
        android:text="@string/reply"
        android:onClick="returnReplyMessage"
        tools:ignore="UsingOnClickInXml" />



</RelativeLayout>